# pandora_rs

./: Cargo.toml  Embed.toml  README.md  memory.x  openocd.gdb  rust-toolchain.toml
.cargo/: config
src/: main.rs
