[package]
name = "pandora_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Turn on maximum optimizations. We only have 64kB flash.
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
nb = "1.0.0"

[dependencies.stm32l4xx-hal]
version = "0.7.1"
features = ["rt", "stm32l475"]
